Shadow catchers with transparency in front of other shadow catchers crash Cycles X #92868

Closed
opened 2021-11-06 00:35:43 +01:00 by Emily Cavalcante · 8 comments

System Information
Operating system: Windows 10
Graphics card: GTX 960 Driver 496.49

Blender Version
Broken: 3.0 beta e7e3431b29
Worked: sorry, no clue. tried builds from early last month and from before cycles-x was merged and they still crashed

Cycles will throw an error when rendering on GPU (Cuda and Optix) if there are shadow catchers with transparency in front of other (solid) shadow catchers. I think the error it threw was different on a scene I was working on, but it refused to render until I removed all objects (decals) with transparency marked as a shadow catcher.

The attached file errors for me both in viewport and rendering.
untitled.blend

**System Information** Operating system: Windows 10 Graphics card: GTX 960 Driver 496.49 **Blender Version** Broken: 3.0 beta e7e3431b2994 Worked: sorry, no clue. tried builds from early last month and from before cycles-x was merged and they still crashed Cycles will throw an error when rendering on GPU (Cuda and Optix) if there are shadow catchers with transparency in front of other (solid) shadow catchers. I think the error it threw was different on a scene I was working on, but it refused to render until I removed all objects (decals) with transparency marked as a shadow catcher. The attached file errors for me both in viewport and rendering. [untitled.blend](https://archive.blender.org/developer/F11739370/untitled.blend)

Added subscriber: @Drop

Added subscriber: @Drop

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscribers: @Sergey, @brecht

Added subscribers: @Sergey, @brecht

This is a bit of a design issue, it's not clear we can support this easily without bigger changes. For 3.0 we may just disable transparency on shadow catchers.

The problem is that we do the shadow catcher split before evaluating the shader. For transparency to work we'd need to evaluate the shader first, then either continue with transparency, or split in the middle of the shade_surface kernel.

This is a bit of a design issue, it's not clear we can support this easily without bigger changes. For 3.0 we may just disable transparency on shadow catchers. The problem is that we do the shadow catcher split before evaluating the shader. For transparency to work we'd need to evaluate the shader first, then either continue with transparency, or split in the middle of the `shade_surface` kernel.

Think for 3.0 is easier to not allow a combination of shadow catcher and transparency. Not sure what should take priority (in terms, disable transparency on shadow catchers, or disable catcher on transparent objects). Feels like it should be uniform with how we deal with volume+shadow catcher.

The proper support we can look into for 3.1. Splitting in/after shade_surface kernel has advantage of avoiding duplicate work on shading same surface from 2 paths as well, but there was something tricky about it last time i've checked about implementing it.

Think for 3.0 is easier to not allow a combination of shadow catcher and transparency. Not sure what should take priority (in terms, disable transparency on shadow catchers, or disable catcher on transparent objects). Feels like it should be uniform with how we deal with volume+shadow catcher. The proper support we can look into for 3.1. Splitting in/after `shade_surface` kernel has advantage of avoiding duplicate work on shading same surface from 2 paths as well, but there was something tricky about it last time i've checked about implementing it.
Sergey Sharybin self-assigned this 2021-11-10 17:18:45 +01:00

This issue was referenced by blender/cycles@4c8e9da5b7

This issue was referenced by blender/cycles@4c8e9da5b725eba0eb0bb8e746d89d5f78c555f4

This issue was referenced by d26d3cfe19

This issue was referenced by d26d3cfe193793728cac77be9b44463a84a0f57e

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#92868
No description provided.